# ds_policy

./: .gitignore  .gitmodules  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
custom_data/: demo_0_eef_traj.npy  demo_0_handle_traj.npy  demo_10_eef_traj.npy  demo_10_handle_traj.npy  demo_11_eef_traj.npy  demo_11_handle_traj.npy  demo_12_eef_traj.npy  demo_12_handle_traj.npy  demo_13_eef_traj.npy  demo_13_handle_traj.npy  demo_14_eef_traj.npy  demo_14_handle_traj.npy  demo_15_eef_traj.npy  demo_15_handle_traj.npy  demo_16_eef_traj.npy  demo_16_handle_traj.npy  demo_17_eef_traj.npy  demo_17_handle_traj.npy  demo_18_eef_traj.npy  demo_18_handle_traj.npy  demo_19_eef_traj.npy  demo_19_handle_traj.npy  demo_1_eef_traj.npy  demo_1_handle_traj.npy  demo_20_eef_traj.npy  demo_20_handle_traj.npy  demo_21_eef_traj.npy  demo_21_handle_traj.npy  demo_22_eef_traj.npy  demo_22_handle_traj.npy  demo_23_eef_traj.npy  demo_23_handle_traj.npy  demo_24_eef_traj.npy  demo_24_handle_traj.npy  demo_25_eef_traj.npy  demo_25_handle_traj.npy  demo_26_eef_traj.npy  demo_26_handle_traj.npy  demo_27_eef_traj.npy  demo_27_handle_traj.npy  (+60 more)
data/: test_ds_policy.npz  trajectories.npz
ds_policy/: __init__.py  disable_jax_logging.py  ds_policy.py  ds_utils.py  load_tools.py  policy.py
ds_policy/neural_ode/: __init__.py  neural_ode.py  (+1 more)
models/: 1.json  mlp_width128_depth3.pt  mlp_width128_depth3.pt_backtrack  mlp_width256_depth3.pt  mlp_width256_depth5.eqx  mlp_width256_depth5.pt  mlp_width256_depth5_seg0.eqx  mlp_width64_depth1.eqx  mlp_width64_depth1.pt  mlp_width64_depth3.eqx  mlp_width64_depth3.pt  mlp_width64_depth3_pos_quat.pt  mlp_width64_depth3_seg1.pt  quat_model.json  quat_model_additional_params.json
src/: disable_jax_logging.py  ds_policy.py  follow_trajectory.py  load_tools.py  lpvds_class.py  neural_ode.py  node_clf.py  node_policy.py  relative_pose.py  test_ds_policy.py  train_neural_ode.py  train_node_clf.py  train_quat.py  utils.py
test/: follow_trajectory.py  test_apply_clf.py  test_ds_policy.py  test_import.py  test_k_medoids  test_realtime_resample.py  test_se3_attractor_resampling.py  test_train_neural_ode.py  test_vector_field.py
(+17 files in other folders)
