[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds_policy"
version = "0.1.0"
description = "Dynamical System Policy for robot control"
readme = "README.md"
authors = [
    {name = "Felix"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "clarabel==0.10.0",
    "contourpy==1.3.1",
    "cvxpy==1.6.0",
    "cycler==0.12.1",
    "filelock==3.18.0",
    "fonttools==4.56.0",
    "fsspec==2025.3.0",
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "jaxopt==0.8.3",
    "Jinja2==3.1.6",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "MarkupSafe==3.0.2",
    "matplotlib==3.6.2",
    "ml_dtypes==0.5.1",
    "Mosek==10.0.34",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.23.3",
    "opt_einsum==3.4.0",
    "osqp==0.6.7.post3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "qdldl==0.1.7.post5",
    "scikit-learn==1.1.2",
    "scipy==1.13.1",
    "scs==3.2.7.post2",
    "six==1.17.0",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "torch==2.5.1",
    "typing_extensions==4.12.2"
]

# Uncomment and add URLs when available
# [project.urls]
# "Homepage" = "https://github.com/username/ds_policy"
# "Bug Tracker" = "https://github.com/username/ds_policy/issues" 